--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="tr">
 
-<!-- latin alfabesine uyarladndı ve tittle oluşturuldu -->
+<!-- latin alfabesine uyarlandı ve title oluşturuldu -->
 <head>
     <meta charset="UTF-8">
     <title>Kodluyoruz HTML Ödev 1</title>
@@ -14,7 +14,7 @@
     <h2>Hakkımda</h2>
     <p>Merhabalar ben Doğukan Özcan. İstanbulda yaşıyorum. Fantastik ve Bilimkurgu filmlerini çok severim. Yüzüklerin efendisi hayranıyım. Yazılıma olan ilgimin dışında basketbol oynamayı ve kitap okumayı çok severim.</p>
 
-<!-- Başlık 2 ile sevdiğim filmi yazdım ve sırasız listeledim, ayrıca bunu bir fotoğraf ile destekledim -->
+<!-- Başlık 2 ile sevdiğim filmi yazdım ve listeledim, ayrıca bunu bir fotoğraf ile destekledim -->
     <h2>Sevdiğim Filmler</h2>
     <li>Yüzüklerin Efendisi</li>
     <img src="yüzük.jpg" alt="Yüzüklerin Efendisi" />
